code minimized, navbar fixed on smaller screen and more

--- a/static/css/index-mobile.css
+++ b/static/css/index-mobile.css
@@ -1,6 +1,7 @@
 #content
 {
   text-align: center;
+  padding-top: 6em;
 }
 
 #abb-banner
