--- a/static/css/main.css
+++ b/static/css/main.css
@@ -13,6 +13,7 @@ body
 #content
 {
   padding-bottom: 2em;
+  padding-top: 2em;
 }
 
 a img
@@ -291,13 +292,21 @@ a.button.inverse
   position: fixed;
   z-index: 2;
   width: 100%;
-  top: 0;
-  transition: all 0.2s ease-in-out;
- }
+}
 
-#navbar.hide-navbar
+@media(min-width: 992px)
 {
-    top: -4em;
+  #navbar
+  {
+    overflow: auto;
+    top: 0;
+    transition: all 0.2s ease-in-out;
+  }
+
+  #navbar.hide-navbar
+  {
+      top: -4em;
+  }
 }
 
 @media(max-width: 991px)
